# rdr-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  memtarget.sh
rdr-compose/: Cargo.toml  test.toml
rdr-compose-egui/: Cargo.toml
rdr-compose-egui/src/: lib.rs  main.rs
rdr-compose/src/: lib.rs  main.rs  model.rs
rdr-compose/src/model/: tokio.rs
rdr-core/: Cargo.toml  README.md  build.rs
rdr-core/src/: lib.rs
rdr-core/src/message/: .gitignore
rdr-core/src/message/proto/: detected_armor.proto  encoded_img.proto
rdr-demo/: Cargo.toml
rdr-demo/src/: main.rs
rdr-pyo3/: Cargo.toml  README.md  pyproject.toml
rdr-pyo3/src/: lib.rs
rdr-web/: Cargo.toml  README.md
rdr-web/src/: main.rs
rdr-zeromq/: Cargo.toml
rdr-zeromq/src/: client.rs  lib.rs  macro.rs  server.rs  traits.rs
