[package]
name = "rdr-compose-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0"
egui_extras = "0"
egui_nodes = { path = "../egui_nodes" }
serde = "*"
serde_derive = "*"
toml = "*"
serde_json = "1.0"

[dependencies.rdr-core]
path = "../rdr-core"

[dependencies.rdr-compose]
path = "../rdr-compose"