[package]
edition = "2021"
name = "rdr-compose"
version = "0.1.0"
[dependencies]
clap = { version = "3", features = ["derive"] }
new_string_template = "1.3"
serde = "*"
serde_derive = "*"
toml = "*"

[dependencies.rdr-core]
path = "../rdr-core"

[dependencies.tokio]
features = ["full"]
version = "1"
