[package]
name = "rdr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
protobuf = { version = "3.0.0-alpha", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen = "3.0.0-alpha"