[package]
name = "rdr-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdr-core = {path = "../rdr-core"}
rdr-zeromq = {path = "../rdr-zeromq"}
zeromq = "*"
tokio = { version = "1", features = ["full"] }
axum = { version = "*", features = ["ws", "headers"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
headers = "0.3"
serde = "1"
serde_json = "1"